fix: css improve for readability

--- a/static/styles.css
+++ b/static/styles.css
@@ -131,14 +131,14 @@ div {
     display:inline-flex;
     background-color:rgba(0,0,0,.4);
     background-blend-mode: multiply;
-    box-shadow: 0px 0px 5px #5a5c5f;
+    box-shadow: 0px 0px 5px #000000; /* orig. #5a5c5f; */
     transform: scale(1.0, 1.0);
     transition: height 0.5s, background-color 0.5s, box-shadow 0.5s, transform 0.2s;
 }
 .newsdiv:hover {
     height:160px;
     background-color:rgba(0,0,0,.1);
-    box-shadow: 0px 0px 12px #5a5c5f;
+    box-shadow: 0px 0px 12px #000000; /* orig. #5a5c5f; */
     transform: scale(1.05, 1.05);
     transition: height 0.5s, background-color 0.5s, box-shadow 0.5s, transform 0.2s;
 }
